# EchoNote

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_REVIEW_CHECKLIST.md  CONTRIBUTORS.md  GOOGLE_OAUTH_SETUP.md  LICENSE  MIGRATION_COMPLETION_NOTICE.md  MIGRATION_SUMMARY.md  NOTICE  PULL_REQUEST_TEMPLATE.md  README.en.md  README.fr.md  README.md  README.zh-CN.md  RELEASE_NOTES_v1.1.0.md  RELEASE_NOTES_v1.3.0.md  REVIEW_SUMMARY.md  THIRD_PARTY_LICENSES.md  UPGRADE_GUIDE_v1.1.0.md  codecov.yml  index.html  main.py  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  requirements.txt.backup  setup.cfg  tailwind.config.ts  tsconfig.json  vite.config.ts  需求文档.txt
.github/workflows/: build.yml  ci.yml  deploy-landing.yml  quality-check.yml  release.yml
.kiro/steering/: product.md  structure.md  tech.md
EchoNote_docs/: API_REFERENCE.md  CI_CD_GUIDE.md  EchoNote_README.md  GOOGLE_OAUTH_SETUP.md
config/: __init__.py  __version__.py  api_constants.py  app_config.py  constants.py  default_config.json
core/: __init__.py  base_manager.py  qt_imports.py
core/calendar/: __init__.py  auto_task_scheduler.py  constants.py  exceptions.py  manager.py  sync_scheduler.py
core/models/: __init__.py  downloader.py  manager.py  registry.py  text_ai_registry.py  translation_registry.py
core/realtime/: __init__.py  archiver.py  audio_buffer.py  audio_routing.py  config.py  integration.py  recorder.py
core/settings/: __init__.py  manager.py
core/timeline/: __init__.py  auto_task_scheduler.py  manager.py
core/transcription/: __init__.py  format_converter.py  manager.py  task_queue.py
core/workspace/: __init__.py  document_parser.py  import_service.py  manager.py  meeting_brief_service.py  summary_service.py  vault_layout.py
data/: IMPLEMENTATION_SUMMARY.md  README.md  __init__.py  test_data_layer.py
data/database/: __init__.py  connection.py  encryption_helper.py  models.py  schema.sql
data/security/: __init__.py  encryption.py  oauth_manager.py  secrets_manager.py
data/storage/: __init__.py  file_manager.py
docs/: ACCESSIBILITY.md  API_REFERENCE.md  CHANGELOG.md  CI_CD_GUIDE.md  CODE_STANDARDS.md  CONTRIBUTING.md  DEVELOPER_GUIDE.md  GOOGLE_OAUTH_SETUP.md  IMPROVEMENT_PLAN_2025.md  PROJECT_OVERVIEW.en.md  PROJECT_OVERVIEW.fr.md  PROJECT_OVERVIEW.zh-CN.md  PROJECT_REVIEW_2025.md  PROJECT_STATUS.md  PYSIDE6_MIGRATION_GUIDE.md  QUICK_START.en.md  QUICK_START.fr.md  QUICK_START.md  QUICK_START.zh-CN.md  README.md  REALTIME_TIMELINE_TRANSLATION_REFACTOR_PLAN_2026-02-24.md  THEME_OUTLINE_GUIDE.md  TIMELINE_CALENDAR_AUDIO_UI_FIX_PLAN_2026-02-24.md  TROUBLESHOOTING.md  UI_UX_IMPROVEMENT_PLAN.md  USER_GUIDE.en.md  USER_GUIDE.fr.md  USER_GUIDE.md  USER_GUIDE.zh-CN.md
docs/landing/: README.md  app.js  index.html  site-content.json  styles.css
docs/plans/: 2026-03-15-unified-workspace-and-local-ai.md  2026-03-15-workspace-experience-rearchitecture.md  2026-03-15-workspace-polish-and-obsidian-alignment.md  2026-03-16-realtime-recording-workflow-refactor.md  2026-03-16-workspace-navigation-drag-drop-refactor.md  2026-03-26-m3-review-fixes.md  2026-03-26-m4-recording-control-fixes.md
docs/project-overview/: README.md  fr.md  zh-CN.md
docs/quick-start/: README.md  en.md  fr.md  zh-CN.md
echonote-landing/: .env.development  .env.production  DEPLOYMENT.md  README.md  eslint.config.ts  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
engines/: __init__.py
examples/: enhanced_i18n_demo.py
resources/: echonote.desktop  models.toml
scripts/: add_apache_headers.py  audit_i18n.py  benchmark_config.py  build_config.py  build_linux.py  build_macos.py  build_windows.py  bump_version.py  convert-themes.ts  create_github_release.py  detect_ui_hardcoded_strings.py  generate_icons.py  migrate_to_pyside6.py  performance_benchmark_unified.py  prepare_release.py  setup_oauth_secrets.py  setup_pre_commit.py  sync_version.py  test_app_startup.py  theme_config.py  verify_pyside6_migration.py
src/: App.tsx  main.tsx  routeTree.gen.ts  router.tsx  test-setup.ts
src-tauri/: Cargo.toml  build.rs  build_support.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: bindings.rs  error.rs  lib.rs  main.rs  state.rs
src-tauri/src/audio/: capture.rs  mod.rs  resampler.rs  vad.rs
src-tauri/src/commands/: audio.rs  llm.rs  mod.rs  models.rs  settings.rs  subtitle.rs  theme.rs  timeline.rs  transcription.rs  workspace.rs
src-tauri/src/config/: mod.rs  schema.rs
src-tauri/src/llm/: contracts.rs  engine.rs  mod.rs  streaming.rs  tasks.rs  worker.rs
src-tauri/src/models/: downloader.rs  mod.rs  registry.rs
src-tauri/src/storage/: db.rs  mod.rs
src-tauri/src/storage/migrations/: 0001_initial.sql  0002_llm_tasks.sql  0003_segment_translations.sql  0003_workspace_assets.sql  0005_workspace_text_assets_language.sql
src-tauri/src/timeline/: manager.rs  mod.rs
src-tauri/src/transcription/: batch.rs  engine.rs  ffmpeg.rs  mod.rs  pipeline.rs
src-tauri/src/workspace/: document.rs  exporter.rs  manager.rs  mod.rs  parser.rs
src-tauri/tests/: audio_pipeline_e2e.rs  build_support.rs  cargo_manifest.rs  workspace_document_types.rs  workspace_manager_api.rs
src/hooks/: useT.ts  (+1 more)
test_reports/: i18n_analysis_report.json
tests/: __init__.py  conftest.py  e2e_performance_test.py
ui/: __init__.py  base_widgets.py  calendar_event_actions.py  constants.py  layout_utils.py  main_window.py  navigation.py  qt_imports.py  sidebar.py  signal_helpers.py  utils.py  workspace_drag_payload.py
utils/: __init__.py  accessibility.py  app_initializer.py  data_cleanup.py  error_handler.py  exception_handler.py  ffmpeg_checker.py  first_run_setup.py  gpu_detector.py  http_client.py  i18n.py  logger.py  loopback_checker.py  loopback_installer.py  model_download.py  network_error_handler.py  post_init_tasks.py  qt_async.py  resource_cleanup.py  resource_monitor.py  startup_optimizer.py  time_utils.py  ui_helpers.py  user_feedback.py  validation.py  validators.py
(+463 files in other folders)
