[package]
name = "echonote"
version = "3.0.0"
description = "EchoNote - AI-powered meeting recorder and transcriber"
authors = ["EchoNote Team"]
edition = "2021"

[lib]
name = "echonote_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri         = { version = "2",   features = ["protocol-asset"] }
tauri-specta  = { version = "2",   features = ["derive"] }
specta        = { version = "2" }
specta-typescript = "0.0.7"
serde         = { version = "1",   features = ["derive"] }
serde_json    = "1"
thiserror     = "1"
tokio         = { version = "1",   features = ["full"] }
uuid          = { version = "1",   features = ["v4"] }
log           = "0.4"
env_logger    = "0.11"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
cuda = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
